# dcm2niix

./: .appveyor.yml  .codespellrc  .gitattributes  .gitignore  .gitmodules  .travis.yml  BATCH.md  CMakeCache.txt  CMakeLists.txt  COMPILE.md  CONTRIBUTE.md  Dockerfile  ERRORS.md  FILENAMING.md  README.md  RENAMING.md  VERSIONS.md  appveyor.yml  batch_config.yml  config.yaml  cpfiles.command  license.txt  notarize.command  old_nii_SaveBIDS.cpp  pyproject.toml  rmfiles.command  run_configuration.yaml  setup.cfg  setup.py  ucm.cmake
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: codespell.yml  release.yml
BIDS/: README.md  extract_units.py
BidsGuess/: README.md
Canon/: README.md
GE/: README.md
Mediso/: README.md
PARREC/: README.md
Philips/: README.md
Siemens/: README.md
SuperBuild/: External-CLOUDFLARE-ZLIB.cmake  External-OPENJPEG.cmake  External-YAML-CPP.cmake  SuperBuild.cmake
Toshiba/: README.md
Troubleshooting/: README.md
UIH/: README.md
cmake/: dcm2niixInitializeBuildType.cmake
cmake/Modules/: FindNIFTI.cmake
console/: CMakeLists.txt  Info.plist  base64.c  base64.cpp  base64.h  cJSON.cpp  cJSON.h  config.h.in  dcm2nii.sln  dcm2nii.vcxproj  dcm2niix  dcm2niix.1  dcm2niix32  dcm2niix64  dcm2niix_fswrapper.cpp  dcm2niix_fswrapper.h  jpg_0XC3.cpp  jpg_0XC3.h  main_console.cpp  main_console_batch.cpp  makefile  miniz.c  nifti1.h  nifti1_io_core.cpp  nifti1_io_core.h  nifti1_io_ext.cpp  nifti1_io_ext.h  nii_dicom.cpp  nii_dicom.h  nii_dicom_batch.cpp  nii_dicom_batch.h  nii_foreign.cpp  nii_foreign.h  nii_io.mm  nii_ortho.cpp  nii_ortho.h  nii_ostu_ml.cpp  nii_ostu_ml.h  notarize.sh  print.h  (+6 more)
console-prefix/src/console-stamp/: console-custominfo.txt
console-prefix/tmp/: console-cfgcmd.txt  console-mkdirs.cmake
console/charls/: License.txt  README.md  charls.h  colortransform.h  constants.h  context.h  contextrunmode.h  decoderstrategy.h  defaulttraits.h  encoderstrategy.h  interface.cpp  jlscodecfactory.h  jpegimagedatasegment.h  jpegls.cpp  jpegmarkercode.h  jpegmarkersegment.cpp  jpegmarkersegment.h  jpegsegment.h  jpegstreamreader.cpp  jpegstreamreader.h  jpegstreamwriter.cpp  jpegstreamwriter.h  lookuptable.h  losslesstraits.h  processline.h  publictypes.h  scan.h  util.h
console/unused/: untgz.c  untgz.h
console/unused_visualstudio/: dcm2nii.sln  dcm2nii.vcxproj  dcm2nii.vcxproj.filters
dcm2laz/: LibTar.pas  dcm2.lpi  dcm2.lpr  dcm2.lps  dcm2.res  form.lfm  form.pas  untar.pas
dcm2niix/: __init__.py
debian/: changelog  control  copyright  rules
docs/: CMakeLists.txt
docs/source/: conf.py  dcm2niibatch.rst  dcm2niix.rst  index.rst
js/: README.md  esbuild.config.js  index.html  package-lock.json  package.json
js/scripts/: pre-build.js
js/src/: index.js  worker.js
linux_binary/: dcm2niix
osx_binary/: dcm2niix
qtGui/: Q_DebugStream.h  Q_DebugStream_new.h  dcm2.pro  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  nii_dicom.c  notes.txt
wxWidgets/: clipboard.cpp  nifti1_io_core.c  nii_dicom_batch.c  nii_ortho.c  readme.txt
xcode/: dcm2niigui.icns
xcode/dcm2/: AppDelegate.h  AppDelegate.m  dcm2-Info.plist  dcm2-Prefix.pch  main.m  myWindow.h  myWindow.m
xcode/dcm2.xcodeproj/: project.pbxproj
xcode/dcm2.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
xcode/dcm2.xcodeproj/project.xcworkspace/xcshareddata/: dcm2.xccheckout
xcode/dcm2.xcodeproj/project.xcworkspace/xcuserdata/administrator.xcuserdatad/: UserInterfaceState.xcuserstate
xcode/dcm2.xcodeproj/project.xcworkspace/xcuserdata/rorden.xcuserdatad/: UserInterfaceState.xcuserstate
xcode/dcm2.xcodeproj/xcuserdata/administrator.xcuserdatad/xcschemes/: dcm2.xcscheme  xcschememanagement.plist
xcode/dcm2.xcodeproj/xcuserdata/rorden.xcuserdatad/xcschemes/: dcm2.xcscheme
xcode/dcm2/en.lproj/: Credits.rtf  MainMenu.xib
