[metadata]
name=pydcm2niix
description=DCM2NIIX Python package
long_description=file: README.md
long_description_content_type=text/markdown
license_file=license.txt
url=https://github.com/rordenlab/dcm2niix
project_urls=
    Changelog=https://github.com/rordenlab/dcm2niix/releases
    Documentation=https://www.nitrc.org/plugins/mwiki/index.php/dcm2nii:MainPage
author=Li X, Morgan PS, Ashburner J, Smith J, Rorden C
maintainer=Casper da Costa-Luis
maintainer_email=imaging@cdcl.ml
keywords=research, jpeg, dicom, neuroscience, mri, neuroimaging, nifti, dcm, nii, nitrc, bids, dcm2niix, mricrogl
classifiers=
    Development Status :: 5 - Production/Stable
    Intended Audience :: Education
    Intended Audience :: Healthcare Industry
    Intended Audience :: Science/Research
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX :: Linux
    Programming Language :: C
    Programming Language :: C++
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3 :: Only
    Topic :: Scientific/Engineering :: Medical Science Apps.
[options]
setup_requires=
    setuptools>=42
    wheel
    setuptools_scm[toml]
    scikit-build>=0.11.0
    cmake>=3.18
    ninja
python_requires=>=3.6
